# rotor-redis

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.rst  index.html  search-index.js  vagga.yaml
examples/: http.rs  query.rs
mio/: struct.Events.html
netbuf/: constant.MAX_BUF_SIZE.html  enum.RangeArgument.html  index.html  struct.Buf.html
rotor/: enum.Compose2.html  enum.SpawnError.html  enum.Void.html  enum.WakeupError.html  index.html  macro.rotor_compose!.html  struct.Config.html  struct.EarlyScope.html  struct.EventSet.html  struct.LoopCreator.html  struct.LoopInstance.html  struct.Notifier.html  struct.PollOpt.html  struct.Response.html  struct.Scope.html  struct.Time.html  struct.Timeout.html  struct.TimerError.html  trait.Evented.html  trait.GenericScope.html  trait.Machine.html
rotor_redis/: enum.Message.html  fn.connect_ip.html  index.html  sidebar-items.js  struct.Future.html  struct.PortReceiver.html  struct.Promise.html  struct.Redis.html  struct.RedisProto.html  trait.Context.html  trait.Receiver.html  type.Fsm.html
rotor_stream/: constant.MAX_BUF_SIZE.html  enum.Accept.html  enum.Exception.html  enum.Expectation.html  index.html  struct.Buf.html  struct.Intent.html  struct.IntentBuilder.html  struct.Persistent.html  struct.ProtocolStop.html  struct.Stream.html  struct.Transport.html  trait.Accepted.html  trait.ActiveStream.html  trait.Protocol.html  trait.SocketError.html  trait.StreamSocket.html
rotor_tools/: index.html  sidebar-items.js
slab/: struct.SlabIter.html  struct.SlabMutIter.html
src/: api.rs  cmd.rs  context.rs  conversion.rs  (+4 more)
(+178 files in other folders)
